--- a/styles/main.css
+++ b/styles/main.css
@@ -19,13 +19,13 @@ html {
  }
  
  .navbar .logo {
-     position: relative; /* positioning will be explained in a resource */
+     position: relative;
      left: 2rem;
  }
 
 .hero-content {
-     position: relative; /* positioning will be explained in a resource */
-     min-height: 600px;  /* hero content element must be _at least_ 600 pixels */
+     position: relative; 
+     min-height: 600px;  
      background-image: url(../assets/images/bloc_jams_bg.jpg);
      background-repeat: no-repeat;
      background-position: center center;
